<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_altas"
        android:layout_width="127dp"
        android:layout_height="84dp"
        android:layout_marginStart="154dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="130dp"
        android:onClick="abrirActivities"
        android:text="@string/txt_btn_Altas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_bajas"
        android:layout_width="136dp"
        android:layout_height="83dp"
        android:layout_marginStart="154dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="133dp"
        android:onClick="abrirActivities"
        android:text="@string/txt_btn_Bajas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_altas" />

    <Button
        android:id="@+id/btn_cambios"
        android:layout_width="154dp"
        android:layout_height="87dp"
        android:layout_marginStart="154dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="136dp"
        android:onClick="abrirActivities"
        android:text="@string/txt_btn_Cambios"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_bajas" />

    <Button
        android:id="@+id/btn_consultas"
        android:layout_width="152dp"
        android:layout_height="74dp"
        android:layout_marginStart="154dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="141dp"
        android:onClick="abrirActivities"
        android:text="@string/txt_btn_Consultas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_cambios" />

</androidx.constraintlayout.widget.ConstraintLayout>